# ogl-playground

./: .clang-format  CMakeLists.txt  main.cpp
